ellenorzesek, mentes, szűrés

--- a/IRF_Beadando/IRF_Beadando/MainForm.resx
+++ b/IRF_Beadando/IRF_Beadando/MainForm.resx
@@ -382,6 +382,58 @@
         3/ue634C86cOv+3HzB8o9WKf2Id1V+wrzZ8o8b1/V0x1Px/TvxP1pez6PYjsRLs/Y9HsfZnH/9k=
 </value>
   </data>
+  <data name="pictureBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAB7UExURf///wAAAIyMjCIiIuzs7Dw8PE9PT1JSUiYmJs/Pz39/f/v7+0FBQdXV1bKysufn5/T0
+        9G1tbcPDw5qamqysrJ+fnzMzM/Hx8dnZ2WNjY7e3tx0dHREREXl5eY+Pj+Hh4UhISGBgYBcXF4ODg3p6
+        ellZWXFxcaWlpTY2NjPIeRgAAApVSURBVHhe7Z3reqIwEEApWi/FC96VKtrS6r7/Ey5JhsolCQMMlPTL
+        +SW7IjkFQjKZBMdisVgsFovFYrFYeoq3DDbu/WMVhourD//2h/CD++DlyXm1GML//A2W7juoPTl/XeF/
+        /wARSOVZ/ZGLdQ0+MhbwHaN5Axk5J+NPozcGFRWzJXzTVGYgouZstKJ3Aw0tJl+oK3DQ8+rB181jBwpl
+        fMH3jeMKAuWsYQ/TQN2EnAnsYRi6J32eHexjFhMoPQrYxyimUHYcW9jLJE5Qdhx72MsgDmcoOxLzulJV
+        6hnGA/YzB1WfUMU37GcO31ByLMbdiP4eSo7GtC7GEMqN5wh7msISyo1nCnuagjUsYg37RvWaZg57moJf
+        qWfBMK7ZVhZFzDMxLlhzgZJjGcF+5lC15W1eL39YsfdkWpMmplrTewB7mUS1y9TIUNQnFB6FkWHvAAqP
+        IYR9DAPfRfw0dHAGH080dijYBYEyTvB9AxmBgp53smpmF7eNDvC5Gw7pHBolZBEan1XfEWx0BKZlQ9ea
+        4Z3SN9joimVpL4qwucYbGQFsdIavb729UiZ/bdgv/kJP+sFV5LjwHRq+4l88/0a+3FI1DDUm/nuz1JZ/
+        8LljprKkjDH16L3HfrXj8Y/hdDoVz4LhLlvlvIf0cRke/aK97rV4wQd3iWuTLW92HtaP1e319XW22qxb
+        uVl4VdpdWseWZZSONvPjcb6bvYRd9I46rUqXLNPk++rMN5fLZupcP7o4Mr/ZO+qlHNmxds4W7r33TdxZ
+        bP9JzK6aM3xumTnTCrxUXuLkMG1fkR2om6qUC4b8T/pkeR20HE7jSWYb2GgVfqR/TlKTJqy9qN3qprNW
+        6YH7BMUOfttPKp4J2UXYlUdnzl7+FMbM2m0y8rYhfG4T0Qa98RZUgVaTZljF3UGSYyhUIsX44ai9x6LP
+        Otsr2GiPJNAdKuNsUVuPZF6Dt16VilomJlTnB59bKkU3VelPVvDpx1XCuZXbkd8fbacdPXvzE+cVPsnZ
+        0cf8eBXXcqs0nX9x5A19DW/UTy7WRrzB57ZID93fvdI44mhBeSJ53PIOGy2xEAUHjphRixVdf5VXbe0O
+        YeXqlk8va6zitKC5d/hYXrsdfBbKS7NHDyDeXIKoBh8FajUnp/gAnAx5RxjH7b6dN6rqWQf/s9WGryRD
+        6Dz39c+MPPvR5bGe1pro7bEjtVqVyuuVbeHaxXEezEaj8eXrMhqdNqiby2e70bVKrxvX3WSfZ4o5Tqef
+        lmoDBoi2GG0HH85Xemha6TE5HqpNLZGyKo0O8IqbrCqFK+8VNhmaAaawUlKGgg84jhLeKiVrJsHs7JQh
+        77mo2F+Rc0l1lF2A7EI5k8WBioYlBpFzrVapSihp4bE2G92UjYJhaULwOXAWlVNqs5SkhbGv0FWlBUMI
+        Xei4O94OMaavZgzHksNvE7puZ8FQbGthR/fLelQ69tp2AG1VWjDEPPLgNnoU1zhBoh+9Ju7g5w0RmaTP
+        2n6Nn/+cYaCtanibET4TkDPETDxI3yLHqM6J1Lc52TcIZ7/lDLdiU0v2AvLX1ds52lQn3je9wAYBOUPE
+        vIN94VnsL3A5bz9o2yu8HUmYZpw1xMz/kT+pghX+ctU/66g7+FlDTKtT+aSaPz5QLYGSBhkvEWFcK2t4
+        F1tadLO2/OvjUla/DkoeBLzVSDg6mTH0MFdaafzEvy7ClfJslqYbsiYNZU5ixhATi0HPaTpMg+3mMp5N
+        Mg28/fd4pGe82pKG2TKGmJbYjH+zAvLRRx20ebMZQ8zUmMoJEtr+phTaIFTGUHzWUznYXn0GKu3QaNoQ
+        FRKtHmyv2gshXhMtbYgK3Rs3IyZtiFr+Ijth5Oj+DhVq27QhKv6S+e3qtQgV+FV+0obiYwkZwyYd/Wbg
+        J+KmDNUJCWkyzVLDDHEx+0yw0zBD3ChoJqPNMEPc7LTM4xi71CA9+KZVylCSnychE+tMJ9Z2C75VkDLE
+        Bc7YN1MchsPhgWDUDck/Pz5eDBwdQ8oQNxF2IInmYlI1aMj9fTE8DX3U/EJpD9gQQ2wfQBLFMMQQ98CX
+        BvoMMcSmk0h6b702hFHuPd5QslJwrw0hjB9VKGaxqu61obN4fxFpsOhiRsF6fsxo9tuQDVXw+FnlYp5n
+        q3C3mB68ZNfJoE34IWoZjmJDdmvVPxGB6Ajrx66bwhOlfstwIQxHDswxbQUxsvm7hmMn/qVcAhkd/TDk
+        gxWTXfFxQkCPDGPCFtLsCQxFMetQMHz5pJ8NQmBYPfqeUDQkHYgXEBhWWCgph8yQfCUeCsPauaNSQ+r5
+        EhSGuFibBLkh8eLzFIbiN2qgMJQ00RtAYVj7MlUZkq4QRGJYYUpFBpUh6ewzEsO6J1FpSLmAIo1hzUei
+        0pBy9XkaQ1TiXhGlIeU0UCJDVFJUAbUhYWIMlWHl1yAw1IaEtSmZYR1FtSFhZgydYeXXdegMCZe9JjSs
+        Pn9LbUg4TZLS0PGwK3kCGkO6mAapoeMcNv/4D6aBoJ5gkl5YWGNI9wqBBoZJvDTHcnv5ft3v97eTu16y
+        QcnsX4GNVF6vx/l6G16makO6BWlrGwZRXKzBW5HIdaNVzD1yIxVvICBCPDJDunUz6ho2TTUQ3Vy1Id1a
+        RHUNa0cuADG/R21IF66pa9h0KqGYU642pAtl1DVsmvIjhkv7bOgsIJ1RRihKHMKmBAhv99pQi5gjBBsa
+        1IZ0McV2DOPGQAxsaFAbls7bRmMN62ENE9SGdBML+mrY97rUGiZYQwr6avj7fQs91jBBbfj7PWA9zQ3p
+        Rkn7atiDOI2W5oZ0y9Raw3o0N+xFRFhDc8NeRPU1NDekGyLtqeE73foWPTXsx+iahsaGhAXqqWE/xoA1
+        NDYkfAdHTw3puod9NSRcgKGnhoQJmD017EfGkAZrmKA0JJxe0lNDwizhnhrC/1PQT0PK14q1YyjWIIAN
+        DSrDyuuCaaA39OahOIUvm2NZD0FlSDmrhNjQD+7p0k5Wa21SusqQck0pSsPrQ7aex+2h7q+rDCnnlFAZ
+        +tNI/bL/d3cqP5UqQ8oZbCSG1235dITTVnIqVYaUL/VqbOhNXeyyx7MoX3KVYU9mlMT4wUm6AvltMwyl
+        3p+nIF16lSH8NwlNDK+yVUsn90XSqDwupKuRTp6xUIUh5YSSRob5V4+8j911/mZbrqNxfv2aZwdeYUi6
+        ACGV4f7+OKpinIfj457O1iw1pAt4xzQxvPB94xokDHKpzkW8Q+AmT8tnrozckPb1/U0MxeyDMT5464na
+        59m9lRpOKGvSZoaQRltciVyBJy7VVCw0MUw3FiaEC1Yzmhgm7wHEjrknszGeKygKw5ETPBVXtGewmWGS
+        CY19335yHz7DvYmh4z/4Bfx5oX9FaRPDnz88bJfgJ/Xp8zL9MYzxlnOPbjzmSRPDZDVB7Poyyey2fF2K
+        X6yxDk0MxYwXfOgvmfn1nPEjFkKjy7SUIZYFrzkQIhL28ck94mU76aVa119vby513ZJj+hYfo24FfXQ/
+        wip1w9w9hW2ttGOxWCwWi8VisVgsv4Pj/AfsmZWfroPGZgAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAQEAAAAEAGAAoMgAAFgAAACgAAABAAAAAgAAAAAEAGAAAAAAAAAAAAAIAAAACAAAAAAAAAAAA
